# ton-app

./: README.md  docker-compose.yaml
backend/: Dockerfile  pyproject.toml
backend/src/: main.py
backend/src/api/: __init__.py  public_api.py
backend/src/clients/: __init__.py  stonfi.py
backend/src/core/: cache.py  context_http.py  exceptions.py  logger.py  settings.py
frontend/: .dockerignore  .env  Dockerfile  package-lock.json  package.json
frontend/ops/: nginx.conf
frontend/src/: App.tsx
frontend/src/components/: ExchangeRate.tsx  WalletConnect.tsx
