[tool.poetry]
name = "ton-app"
version = "0.1.0"
description = ""
authors = ["Denis Malin <denis@malina.page>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.112.2"}
aio-clients = "^2.1.0"
uvicorn = "^0.30.6"
pydantic-settings = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
